--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ interface Props {
   title: string;
 }
 import "../main.css";
+import Navbar from "../components/Navbar";
 import Button2 from "../components/buttons/Button2";
 // const { title } = Astro.props;
 ---
@@ -18,12 +19,7 @@ import Button2 from "../components/buttons/Button2";
     <title>Byte Bros</title>
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/services">Services</a>
-      <a href="/contact">Contact Us</a>
-    </nav>
+    <Navbar client:load />
     <main>
       <slot />
     </main>
@@ -31,7 +27,7 @@ import Button2 from "../components/buttons/Button2";
       <h3>Stay in Touch</h3>
       <lable>Your Email</lable>
       <input />
-      <Button2 contents="Send" />
+      <Button2 contents="Subscribe" />
     </footer>
   </body>
 </html>
