--- a/src/main.css
+++ b/src/main.css
@@ -1,24 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Montserrat&display=swap');
+
 body {
     height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
     background-color: rgb(245, 245, 245);
+    font-family: 'Inter', sans-serif;
 }
 
 nav {
-    height: 1rem;
+    height: 3rem;
+    padding: 1rem;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    gap: 1rem;
+    background-color: rgb(245, 245, 245);
+    position: sticky;
+    top: 0;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    transition: box-shadow 0.3s ease;
+}
+
+nav.scrolled {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 a {
-    font-size: 15px;
-    color: #ffffff;
+    font-size: 20px;
+    color: black;
     text-decoration: none;
 }
 
@@ -76,9 +92,9 @@ a {
 .cta span {
     padding-bottom: 7px;
     letter-spacing: 4px;
-    font-size: 14px;
+    font-size: 16px;
     padding-right: 15px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 
 .cta svg {
@@ -107,7 +123,7 @@ a {
 .hover-underline-animation:after {
     content: "";
     position: absolute;
-    width: 140%;
+    width: 123%;
     transform: scaleX(0);
     height: 2px;
     bottom: 0;
