--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,6 +5,11 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Byte Bros">
   <main>
     <h1>About Byte Bros</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, necessitatibus recusandae sunt blanditiis corporis aliquam, voluptatem iusto laboriosam commodi, officia exercitationem doloremque harum numquam facere odit expedita? Doloribus, accusamus hic?</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
+      necessitatibus recusandae sunt blanditiis corporis aliquam, voluptatem
+      iusto laboriosam commodi, officia exercitationem doloremque harum numquam
+      facere odit expedita? Doloribus, accusamus hic?
+    </p>
   </main>
 </Layout>
