--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* 
+    Colors:
+    Orange: #ff6700
+    Blue: #007BFF
+    Black: Black
+    Background Color: rgb(245, 245, 245)
+    White: #fff
+*/
 
 body {
     height: 100%;
@@ -12,7 +22,7 @@ body {
 }
 
 nav {
-    height: 3rem;
+    height: 2.4rem;
     padding: 1rem;
     width: 100%;
     display: flex;
@@ -30,6 +40,9 @@ nav {
 
 nav.scrolled {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 a {
@@ -37,6 +50,45 @@ a {
     color: black;
     text-decoration: none;
 }
+
+footer {
+    background-color: #c6c6c6;
+    color: rgb(176, 176, 176);
+    padding: 2rem;
+    text-align: center;
+}
+
+footer h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    color: black;
+}
+
+footer form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 95vh;
+}
+
+.contact-form {
+    text-align: center;
+}
+
+.container a {
+    text-decoration: underline;
+    color: #007BFF;
+}
+
 
 /* BUTTONS */
 
@@ -61,7 +113,7 @@ a {
     position: absolute;
     width: 100px;
     height: 120%;
-    background-color: #00c3ff;
+    background-color: #007BFF;
     top: 50%;
     transform: skewX(30deg) translate(-150%, -50%);
     transition: all 0.5s;
@@ -94,7 +146,6 @@ a {
     letter-spacing: 4px;
     font-size: 16px;
     padding-right: 15px;
-    /* text-transform: uppercase; */
 }
 
 .cta svg {
@@ -137,3 +188,80 @@ a {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
+
+/* INPUTS */
+
+.input-container {
+    position: relative;
+    margin: 50px auto;
+    width: 200px;
+}
+
+.input-container input[type="text"] {
+    font-size: 20px;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #000000;
+    padding: 5px 0;
+    background-color: transparent;
+    outline: none;
+}
+
+.input-container .label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #000000;
+    transition: all 0.3s ease;
+    pointer-events: none;
+}
+
+.input-container input[type="text"]:focus~.label,
+.input-container input[type="text"]:valid~.label {
+    top: -20px;
+    font-size: 16px;
+    color: #333;
+}
+
+.input-container .underline {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: #ff6700;
+    transform: scaleX(0);
+    transition: all 0.3s ease;
+}
+
+.input-container input[type="text"]:focus~.underline,
+.input-container input[type="text"]:valid~.underline {
+    transform: scaleX(1);
+}
+
+/*  */
+
+.footer-input {
+    --font-color: #323232;
+    --font-color-sub: #666;
+    --bg-color: #fff;
+    --main-color: #323232;
+    width: 150px;
+    height: 20px;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    background-color: var(--bg-color);
+    box-shadow: 4px 4px var(--main-color);
+    font-size: 15px;
+    font-weight: 600;
+    color: var(--font-color);
+    padding: 5px 10px;
+    outline: none;
+}
+
+.footer-input::placeholder {
+    color: var(--font-color-sub);
+    opacity: 0.8;
+}
+
+/*  */
