--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,51 +6,56 @@ import Button1 from "../components/buttons/Button1";
 <Layout title="Byte Bros">
   <main>
     <h1>Welcome to Byte Bros</h1>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dignissimos beatae maiores esse harum! Quis, magnam unde? Tempora blanditiis dolorum provident pariatur asperiores? Iusto quos mollitia provident, numquam nostrum sequi!</p>
-	<Button1 contents="Get In Touch" />
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<p>dsfdsfsdf</p>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<p>dsfdsfsdf</p>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<p>dsfdsfsdf</p>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<p>dsfdsfsdf</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dignissimos
+      beatae maiores esse harum! Quis, magnam unde? Tempora blanditiis dolorum
+      provident pariatur asperiores? Iusto quos mollitia provident, numquam
+      nostrum sequi!
+    </p>
+    <Button1 contents="Get In Touch" />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <p>dsfdsfsdf</p>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <p>dsfdsfsdf</p>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <p>dsfdsfsdf</p>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <p>dsfdsfsdf</p>
   </main>
 </Layout>
