--- a/src/main.css
+++ b/src/main.css
@@ -52,10 +52,16 @@ a {
 }
 
 footer {
-    background-color: #c6c6c6;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.2rem;
+    background-color: #fff;
     color: rgb(176, 176, 176);
     padding: 2rem;
     text-align: center;
+    border-top: 1px solid black;
 }
 
 footer h3 {
@@ -72,7 +78,12 @@ footer form {
     gap: 10px;
 }
 
-.container {
+.contact-container {
+    background-image: url('./miami1.jpg');
+    background-color: rgb(245, 245, 245);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,12 +92,30 @@ footer form {
 }
 
 .contact-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+    background-color: #fff;
+    border-radius: .3rem;
+    height: 35rem;
+    width: 50rem;
     text-align: center;
 }
 
-.container a {
-    text-decoration: underline;
-    color: #007BFF;
+.line-separator {
+    height: 30rem;
+    border: 1.5px solid black;
+}
+
+#socials {
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 
