--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,41 +1,69 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Button2 from "../components/buttons/Button2";
 ---
 
 <Layout title="Byte Bros">
-  <main class="container">
+  <main class="contact-container">
     <form class="contact-form">
-      <div class="input-container">
-        <input type="text" id="input" required="" />
-        <label for="input" class="label">Name</label>
-        <div class="underline"></div>
+      <div>
+        <div class="input-container">
+          <input type="text" id="input" required />
+          <label for="input" class="label">Name</label>
+          <div class="underline"></div>
+        </div>
+        <div class="input-container">
+          <input type="text" id="input" required />
+          <label for="input" class="label">Email</label>
+          <div class="underline"></div>
+        </div>
+        <div class="input-container">
+          <input type="text" id="input" required />
+          <label for="input" class="label">Business Name</label>
+          <div class="underline"></div>
+        </div>
+        <div class="input-container">
+          <input type="text" id="input" required />
+          <label for="input" class="label">Location</label>
+          <div class="underline"></div>
+        </div>
+        <div class="input-container">
+          <input type="text" id="input" required />
+          <label for="input" class="label">Message</label>
+          <div class="underline"></div>
+        </div>
+        <button class="cta">
+          <span class="hover-underline-animation">Send</span>
+          <svg
+            viewBox="0 0 46 16"
+            height="10"
+            width="30"
+            xmlns="http://www.w3.org/2000/svg"
+            id="arrow-horizontal"
+          >
+            <path
+              transform="translate(30)"
+              d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+              data-name="Path 10"
+              id="Path_10"></path>
+          </svg>
+        </button>
       </div>
-      <div class="input-container">
-        <input type="text" id="input" required="" />
-        <label for="input" class="label">Email</label>
-        <div class="underline"></div>
+      <div class="line-separator"></div>
+      <div
+        class="calendly-inline-widget"
+        data-url="https://calendly.com/jacobhandwerger?primary_color=007bff"
+        style="min-width:320px;height:500px;"
+      >
       </div>
-      <div class="input-container">
-        <input type="text" id="input" required="" />
-        <label for="input" class="label">Business Name</label>
-        <div class="underline"></div>
-      </div>
-      <div class="input-container">
-        <input type="text" id="input" required="" />
-        <label for="input" class="label">Location</label>
-        <div class="underline"></div>
-      </div>
-      <div class="input-container">
-        <input type="text" id="input" required="" />
-        <label for="input" class="label">Message</label>
-        <div class="underline"></div>
-      </div>
-      <Button2 contents="Send" />
     </form>
-    <h3>--- OR ---</h3>
-    <a href="https://calendly.com/jacobhandwerger/30-minute-meeting-clone"
-      >Book a Meeting</a
-    >
   </main>
 </Layout>
+<script
+  type="text/javascript"
+  src="https://assets.calendly.com/assets/external/widget.js"
+  async></script>
+<style>
+  .hover-underline-animation:after {
+    width: 140%;
+  }
+</style>
