--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,13 +3,49 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Byte Bros">
-  <main>
-    <h1>About Byte Bros</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
-      necessitatibus recusandae sunt blanditiis corporis aliquam, voluptatem
-      iusto laboriosam commodi, officia exercitationem doloremque harum numquam
-      facere odit expedita? Doloribus, accusamus hic?
-    </p>
+  <main id="about-container">
+    <div class="about-text">
+      <h2>Our Story</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
+        necessitatibus recusandae sunt blanditiis corporis aliquam, voluptatem
+        iusto laboriosam commodi, officia exercitationem doloremque harum
+        numquam facere odit expedita? Doloribus, accusamus hic?
+      </p>
+      <h2>Our Mission</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
+        necessitatibus recusandae sunt blanditiis corporis aliquam, voluptatem
+        iusto laboriosam commodi, officia exercitationem doloremque harum
+        numquam facere odit expedita? Doloribus, accusamus hic?
+      </p>
+      <h2>Testimonials</h2>
+      <div class="testimonials">
+        <div class="card" style="--rating:90">
+          <div class="icon">🫡</div>
+          <div class="title">Mr. 1</div>
+          <p class="description">
+            "lorem ipsum dolor sit amet consectetur adipisicing elit."
+          </p>
+          <div class="rating"></div>
+        </div>
+        <div class="card" style="--rating:80">
+          <div class="icon">😤</div>
+          <div class="title">Mr. 2</div>
+          <p class="description">
+            "lorem ipsum dolor sit amet consectetur adipisicing elit."
+          </p>
+          <div class="rating"></div>
+        </div>
+        <div class="card" style="--rating:100">
+          <div class="icon">🥶</div>
+          <div class="title">Mr. 3</div>
+          <p class="description">
+            "lorem ipsum dolor sit amet consectetur adipisicing elit."
+          </p>
+          <div class="rating"></div>
+        </div>
+      </div>
+    </div>
   </main>
 </Layout>
