--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Byte Bros">
-  <main class="contact-container">
+  <main id="contact-container">
     <form class="contact-form">
       <div>
         <div class="input-container">
@@ -58,12 +58,13 @@ import Layout from "../layouts/Layout.astro";
     </form>
   </main>
 </Layout>
-<script
-  type="text/javascript"
-  src="https://assets.calendly.com/assets/external/widget.js"
-  async></script>
 <style>
   .hover-underline-animation:after {
     width: 140%;
+    background-color: #007bff;
   }
 </style>
+<script
+  type="text/javascript"
+  src="https://assets.calendly.com/assets/external/widget.js"
+  async></script>;
