--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -4,18 +4,119 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Byte Bros">
   <main id="services-container">
-    <h1>Byte Bros Services</h1>
     <h3>What we offer:</h3>
-    <ul>
-      <li>repair</li>
-      <li>repair</li>
-      <li>repair</li>
-    </ul>
-    <h3>Who we serve</h3>
-    <ul>
-      <li>customer</li>
-      <li>customer</li>
-      <li>customer</li>
-    </ul>
+    <div class="services">
+      <div class="card2">
+        <div class="icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 24 24"
+            ><path
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1.5"
+              d="M20.8 14.222H3.654a.6.6 0 0 0-.578.437L1.72 19.456A2 2 0 0 0 3.644 22h16.712a2 2 0 0 0 1.924-2.544l-1.48-5.234Zm0 0v-6.11m-17.6 6.11V4a2 2 0 0 1 2-2H12m-1 17h2m4.657-14.172l-2.829 2.829m5.657-2.829A2 2 0 1 1 17.657 2m-2.829 8.485A2 2 0 0 0 12 7.657"
+            ></path></svg
+          >
+        </div>
+        <p class="title">Repair 1</p>
+        <p class="text">Lorem ipsum dolor.</p>
+      </div>
+      <div class="card2">
+        <div class="icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 24 24"
+            ><path
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1.5"
+              d="M20.8 14.222H3.654a.6.6 0 0 0-.578.437L1.72 19.456A2 2 0 0 0 3.644 22h16.712a2 2 0 0 0 1.924-2.544l-1.48-5.234Zm0 0v-6.11m-17.6 6.11V4a2 2 0 0 1 2-2H12m-1 17h2m4.657-14.172l-2.829 2.829m5.657-2.829A2 2 0 1 1 17.657 2m-2.829 8.485A2 2 0 0 0 12 7.657"
+            ></path></svg
+          >
+        </div>
+        <p class="title">Repair 2</p>
+        <p class="text">Lorem ipsum dolor.</p>
+      </div>
+      <div class="card2">
+        <div class="icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 24 24"
+            ><path
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1.5"
+              d="M20.8 14.222H3.654a.6.6 0 0 0-.578.437L1.72 19.456A2 2 0 0 0 3.644 22h16.712a2 2 0 0 0 1.924-2.544l-1.48-5.234Zm0 0v-6.11m-17.6 6.11V4a2 2 0 0 1 2-2H12m-1 17h2m4.657-14.172l-2.829 2.829m5.657-2.829A2 2 0 1 1 17.657 2m-2.829 8.485A2 2 0 0 0 12 7.657"
+            ></path></svg
+          >
+        </div>
+        <p class="title">Repair 3</p>
+        <p class="text">Lorem ipsum dolor.</p>
+      </div>
+    </div>
+    <h3>Who We Serve</h3>
+    <div class="serve">
+      <div class="card2">
+        <div class="icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M12 12q-1.65 0-2.825-1.175T8 8q0-1.65 1.175-2.825T12 4q1.65 0 2.825 1.175T16 8q0 1.65-1.175 2.825T12 12Zm-8 8v-2.8q0-.85.438-1.563T5.6 14.55q1.55-.775 3.15-1.163T12 13q1.65 0 3.25.388t3.15 1.162q.725.375 1.163 1.088T20 17.2V20H4Z"
+            ></path></svg
+          >
+        </div>
+        <p class="title">Person 1</p>
+        <p class="text">Lorem ipsum dolor.</p>
+      </div>
+      <div class="card2">
+        <div class="icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M12 12q-1.65 0-2.825-1.175T8 8q0-1.65 1.175-2.825T12 4q1.65 0 2.825 1.175T16 8q0 1.65-1.175 2.825T12 12Zm-8 8v-2.8q0-.85.438-1.563T5.6 14.55q1.55-.775 3.15-1.163T12 13q1.65 0 3.25.388t3.15 1.162q.725.375 1.163 1.088T20 17.2V20H4Z"
+            ></path></svg
+          >
+        </div>
+        <p class="title">Person 2</p>
+        <p class="text">Lorem ipsum dolor.</p>
+      </div>
+      <div class="card2">
+        <div class="icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M12 12q-1.65 0-2.825-1.175T8 8q0-1.65 1.175-2.825T12 4q1.65 0 2.825 1.175T16 8q0 1.65-1.175 2.825T12 12Zm-8 8v-2.8q0-.85.438-1.563T5.6 14.55q1.55-.775 3.15-1.163T12 13q1.65 0 3.25.388t3.15 1.162q.725.375 1.163 1.088T20 17.2V20H4Z"
+            ></path></svg
+          >
+        </div>
+        <p class="title">Person 3</p>
+        <p class="text">Lorem ipsum dolor.</p>
+      </div>
+    </div>
   </main>
 </Layout>
