--- a/src/main.css
+++ b/src/main.css
@@ -61,11 +61,15 @@ footer form {
 
 
 #home-container {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.home-top {
+    height: 95vh;
 }
 
 .home-image {
@@ -93,50 +97,32 @@ footer form {
     color: #007BFF;
 }
 
-/* #about-container {
-    height: 95vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.testimonials {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-    gap: 5rem;
-} */
-
 #about-container {
-    height: 95vh;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* Two equal columns */
     grid-template-areas:
         "left-section right-section"
         "testimonials testimonials";
-    /* Testimonials section spans both columns */
     background-color: #f7f7f7;
-    /* Background color */
 }
 
 .about-text {
     padding: 2rem;
     text-align: center;
     grid-area: center-section;
-    /* Place this section in the left column */
 }
 
 .left-section {
     text-align: left;
-    /* Align text in this section to the left */
 }
 
 .right-section {
     text-align: right;
-    /* Align text in this section to the right */
+}
+
+.about-text h2 {
+    color: #005fc4;
 }
 
 .testimonials {
@@ -146,11 +132,10 @@ footer form {
     align-content: center;
     gap: 5rem;
     grid-area: testimonials;
-    /* Span both columns */
 }
 
 #services-container {
-    height: 95vh;
+    height: 100%;
 }
 
 #contact-container {
@@ -461,27 +446,6 @@ footer {
     --ratingColor: #ffbb2a;
 }
 
-/* 
-    Orange: #ff6700
-    Blue: #007BFF
-    Black: Black
-    Background Color: rgb(245, 245, 245)
-    White: #fff
-*/
-
-/* @media (prefers-color-scheme: dark) {
-    .card {
-        --background: #3c4043;
-        --cardShadow: rgba(0, 0, 0, .28);
-        --cardShadowHover: rgba(0, 0, 0, .16);
-        --cardShadowActive: rgba(0, 0, 0, .55);
-        --cardBorder: #202125;
-        --cardBorderActive: #8ab4f8;
-        --textColor: #e9eaee;
-        --linkColor: #8ab4f8;
-    }
-} */
-
 .card {
     width: 250px;
     height: 350px;
@@ -501,13 +465,7 @@ footer {
     box-shadow: 16px 16px 0 var(--cardShadowHover);
 }
 
-/* .card:active {
-    transform: translate(-2px, -4px);
-    border: 2px solid var(--cardBorderActive);
-    box-shadow: 4px 4px 0 var(--cardShadowActive);
-} */
-
-.card>.icon,
+.card>.icon1,
 .card>.title,
 .card>.description {
     margin-bottom: 0.7em;
@@ -525,7 +483,7 @@ footer {
     min-height: 6em;
 }
 
-.card>.icon {
+.card>.icon1 {
     font-size: 3em;
     margin-bottom: .2em;
 }
@@ -557,4 +515,173 @@ footer {
     color: var(--linkColor);
     font-size: .8em;
     font-weight: 600;
+}
+
+/*  */
+
+.card2 {
+    width: 100%;
+    max-width: 300px;
+    min-width: 200px;
+    height: 250px;
+    background-color: #292929;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
+    border: 2px solid rgba(7, 7, 7, 0.12);
+    font-size: 16px;
+    transition: all 0.3s ease;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+}
+
+.icon {
+    margin: 0 auto;
+    width: 100%;
+    height: 80px;
+    max-width: 80px;
+    background: linear-gradient(90deg, #1257e2 0%, #257cff 40%, rgba(0, 0, 0, 0.28) 60%);
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.8s ease;
+    background-position: 0px;
+    background-size: 200px;
+}
+
+.icon svg {
+    fill: white;
+}
+
+.card2 .title {
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    margin-top: 30px;
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
+.card2 .text {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 13px;
+    text-align: center;
+    margin-top: 20px;
+    color: white;
+    font-weight: 200;
+    letter-spacing: 2px;
+    opacity: 0;
+    max-height: 0;
+    transition: all 0.3s ease;
+}
+
+.card2:hover {
+    height: 270px;
+}
+
+.card2:hover .text {
+    transition: all 0.3s ease;
+    opacity: 1;
+    max-height: 40px;
+}
+
+.card2:hover .icon {
+    background-position: -120px;
+    transition: all 0.3s ease;
+}
+
+.card2:hover .icon svg path {
+    fill: url('#gradientColor');
+    transition: all 0.3s ease;
+}
+
+/*  */
+
+article {
+    --img-scale: 1.001;
+    --title-color: black;
+    --link-icon-translate: -20px;
+    --link-icon-opacity: 0;
+    position: relative;
+    /* border-radius: 16px; */
+    box-shadow: none;
+    background: #fff;
+    transform-origin: center;
+    transition: all 0.4s ease-in-out;
+    overflow: hidden;
+    margin-bottom: 1rem;
+}
+
+article a::after {
+    position: absolute;
+    inset-block: 0;
+    inset-inline: 0;
+    cursor: pointer;
+    content: "";
+}
+
+/* basic article elements styling */
+article h2 {
+    margin: 0 0 18px 0;
+    font-size: 1.9rem;
+    letter-spacing: 0.06em;
+    color: var(--title-color);
+    transition: color 0.3s ease-out;
+}
+
+figure {
+    margin: 0;
+    padding: 0;
+    aspect-ratio: 16 / 9;
+    overflow: hidden;
+}
+
+article img {
+    max-width: 100%;
+    transform-origin: center;
+    transform: scale(var(--img-scale));
+    transition: transform 0.4s ease-in-out;
+}
+
+.article-body {
+    padding: 24px;
+}
+
+article a {
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    color: #007BFF;
+}
+
+article a:focus {
+    outline: 1px dotted #007BFF;
+}
+
+article a .icon {
+    min-width: 24px;
+    width: 24px;
+    height: 24px;
+    margin-left: 5px;
+    transform: translateX(var(--link-icon-translate));
+    opacity: var(--link-icon-opacity);
+    transition: all 0.3s;
+}
+
+/* using the has() relational pseudo selector to update our custom properties */
+article:has(:hover, :focus) {
+    --img-scale: 1.1;
+    --title-color: #007BFF;
+    --link-icon-translate: 0;
+    --link-icon-opacity: 1;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
