styles, refactoring soon

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,34 +5,49 @@ import Button2 from "../components/buttons/Button2";
 
 <Layout title="Byte Bros">
   <main id="about-container">
-    <div class="about-text">
-      <h2>Testimonials</h2>
-      <div class="testimonials">
-        <div class="card" style="--rating:90">
-          <div class="icon1">🫡</div>
-          <div class="title">Mr. 1</div>
-          <p class="description">
-            "lorem ipsum dolor sit amet consectetur adipisicing elit."
+    <article>
+      <div class="article-wrapper">
+        <figure>
+          <img
+            src="https://hips.hearstapps.com/hmg-prod/images/miami-beach-ocean-drive-historic-district-royalty-free-image-1662581783.jpg"
+            alt="story"
+          />
+        </figure>
+        <div class="article-body">
+          <h2>Our Story</h2>
+          <p>
+            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante,
+            euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
+            lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
+            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante,
+            euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
+            lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
           </p>
-          <div class="rating"></div>
-        </div>
-        <div class="card" style="--rating:80">
-          <div class="icon1">😤</div>
-          <div class="title">Mr. 2</div>
-          <p class="description">
-            "lorem ipsum dolor sit amet consectetur adipisicing elit."
-          </p>
-          <div class="rating"></div>
-        </div>
-        <div class="card" style="--rating:100">
-          <div class="icon1">🥶</div>
-          <div class="title">Mr. 3</div>
-          <p class="description">
-            "lorem ipsum dolor sit amet consectetur adipisicing elit."
-          </p>
-          <div class="rating"></div>
+          <!-- <Button2 contents="Read more" /> -->
         </div>
       </div>
-    </div>
+    </article>
+    <article>
+      <div class="article-wrapper">
+        <figure>
+          <img
+            src="https://hips.hearstapps.com/hmg-prod/images/miami-beach-ocean-drive-historic-district-royalty-free-image-1662581783.jpg"
+            alt="story"
+          />
+        </figure>
+        <div class="article-body">
+          <h2>Our Mission</h2>
+          <p>
+            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante,
+            euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
+            lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
+            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante,
+            euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
+            lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
+          </p>
+          <!-- <Button2 contents="Read more" /> -->
+        </div>
+      </div>
+    </article>
   </main>
 </Layout>
