--- a/src/main.css
+++ b/src/main.css
@@ -29,7 +29,7 @@ nav {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 3rem;
     background-color: rgb(245, 245, 245);
     position: sticky;
     top: 0;
@@ -57,6 +57,11 @@ footer form {
     justify-content: center;
     align-items: center;
     gap: 10px;
+}
+
+.storyset-a {
+    color: rgb(176, 176, 176);
+    font-size: 1rem;
 }
 
 
@@ -98,31 +103,13 @@ footer form {
 }
 
 #about-container {
+    padding: 3rem;
     height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:
-        "left-section right-section"
-        "testimonials testimonials";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
     background-color: #f7f7f7;
-}
-
-.about-text {
-    padding: 2rem;
-    text-align: center;
-    grid-area: center-section;
-}
-
-.left-section {
-    text-align: left;
-}
-
-.right-section {
-    text-align: right;
-}
-
-.about-text h2 {
-    color: #005fc4;
 }
 
 .testimonials {
@@ -136,6 +123,29 @@ footer form {
 
 #services-container {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-bottom: 2rem;
+}
+
+#services-container h3 {
+    padding-left: 1rem;
+    font-size: 1.6rem;
+}
+
+.services {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
+
+.serve {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
 }
 
 #contact-container {
@@ -524,10 +534,10 @@ footer {
     max-width: 300px;
     min-width: 200px;
     height: 250px;
-    background-color: #292929;
+    background-color: rgb(50, 50, 50);
     margin: 10px;
     border-radius: 10px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
+    box-shadow: 10px 2px 10px rgba(0, 0, 0, 0.24);
     border: 2px solid rgba(7, 7, 7, 0.12);
     font-size: 16px;
     transition: all 0.3s ease;
@@ -545,7 +555,7 @@ footer {
     width: 100%;
     height: 80px;
     max-width: 80px;
-    background: linear-gradient(90deg, #1257e2 0%, #257cff 40%, rgba(0, 0, 0, 0.28) 60%);
+    background: linear-gradient(90deg, #ff8800 0%, #ff6700 40%, #fff 60%);
     border-radius: 100%;
     display: flex;
     justify-content: center;
@@ -584,23 +594,22 @@ footer {
     transition: all 0.3s ease;
 }
 
-.card2:hover {
+/* .card2:hover {
     height: 270px;
-}
+} */
 
 .card2:hover .text {
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
     opacity: 1;
     max-height: 40px;
 }
 
 .card2:hover .icon {
     background-position: -120px;
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
 }
 
 .card2:hover .icon svg path {
-    fill: url('#gradientColor');
     transition: all 0.3s ease;
 }
 
@@ -612,7 +621,6 @@ article {
     --link-icon-translate: -20px;
     --link-icon-opacity: 0;
     position: relative;
-    /* border-radius: 16px; */
     box-shadow: none;
     background: #fff;
     transform-origin: center;
