--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,8 +3,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Byte Bros">
-    <main>
-        <h1>Looks like you're lost</h1>
-        <a href="/">Take me back</a>
-    </main>
+  <main class="four-container">
+    <h1>Looks like you're lost</h1>
+    <a href="/">Take me back</a>
+  </main>
 </Layout>
