--- a/src/main.css
+++ b/src/main.css
@@ -1,15 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Montserrat&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-/* 
-    Colors:
-    Orange: #ff6700
-    Blue: #007BFF
-    Black: Black
-    Background Color: rgb(245, 245, 245)
-    White: #fff
-*/
-
 body {
     height: 100%;
     width: 100%;
@@ -26,10 +17,8 @@ nav {
     padding: 1.3rem;
     width: 100%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
     background-color: rgb(245, 245, 245);
     position: sticky;
     top: 0;
@@ -45,25 +34,86 @@ nav.scrolled {
     -webkit-backdrop-filter: blur(10px);
 }
 
-a {
-    font-size: 20px;
-    color: black;
-    text-decoration: none;
+.navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-footer form {
+.nav-links {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+    gap: 3rem;
+    margin-right: 2rem;
+}
+
+nav a {
+    font-size: 1.5rem;
+    font-weight: 900;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    transition: background 0.5 ease;
+}
+
+.nav-link:hover {
+    background: #007BFF;
+    color: white;
+    border-radius: .8rem;
+}
+
+.hamburger {
+    display: none;
+    margin-right: 2rem;
+}
+
+@media screen and (max-width: 850px) {
+    .nav-links {
+        display: none;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+
+    .nav-links.show {
+        display: flex;
+        flex-direction: column;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        padding: 1rem 0;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .nav-links.show a {
+        padding: 0.5rem;
+        text-align: center;
+    }
+
+    .nav-link:hover {
+        background-color: #007BFF;
+        color: white;
+        border-radius: 0px;
+    }
+}
+
+a {
+    color: #000;
+    position: relative;
+    text-decoration: underline;
+    padding: 5px;
 }
 
 .storyset-a {
     color: rgb(176, 176, 176);
     font-size: 1rem;
 }
-
 
 #home-container {
     height: 100%;
@@ -189,6 +239,11 @@ footer {
     color: rgb(176, 176, 176);
 }
 
+footer form {
+    display: flex;
+    gap: .5rem;
+}
+
 .footer-top {
     display: flex;
     flex-direction: row;
@@ -267,6 +322,20 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+}
+
+.four-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 95vh;
+}
+
+.four-container a {
+    font-size: 2rem;
+    color: #007BFF;
+    text-decoration: underline;
 }
 
 /* BUTTONS */
