--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Button2 from "../components/buttons/Button2";
 ---
 
 <Layout title="Byte Bros">
@@ -8,10 +7,7 @@ import Button2 from "../components/buttons/Button2";
     <article>
       <div class="article-wrapper">
         <figure>
-          <img
-            src="https://hips.hearstapps.com/hmg-prod/images/miami-beach-ocean-drive-historic-district-royalty-free-image-1662581783.jpg"
-            alt="story"
-          />
+          <img src="./miami2.jpg" alt="story" />
         </figure>
         <div class="article-body">
           <h2>Our Story</h2>
@@ -23,17 +19,13 @@ import Button2 from "../components/buttons/Button2";
             euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
             lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
           </p>
-          <!-- <Button2 contents="Read more" /> -->
         </div>
       </div>
     </article>
     <article>
       <div class="article-wrapper">
         <figure>
-          <img
-            src="https://hips.hearstapps.com/hmg-prod/images/miami-beach-ocean-drive-historic-district-royalty-free-image-1662581783.jpg"
-            alt="story"
-          />
+          <img src="./repair.jpg" alt="mission" />
         </figure>
         <div class="article-body">
           <h2>Our Mission</h2>
@@ -45,7 +37,6 @@ import Button2 from "../components/buttons/Button2";
             euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
             lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
           </p>
-          <!-- <Button2 contents="Read more" /> -->
         </div>
       </div>
     </article>
