--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,9 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Byte Bros">
   <main id="home-container">
     <div class="home-top">
-      <h1>Company Catchprase <span class="home-span">Action Word</span></h1>
+      <h1 class="home-text-h1">
+        Company Catchprase <span class="home-span">Action Word</span>
+      </h1>
       <div class="image-container">
         <img src="./icon.svg" />
       </div>
