--- a/src/main.css
+++ b/src/main.css
@@ -14,7 +14,8 @@ body {
 
 nav {
     height: 2.4rem;
-    padding: 1.3rem;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -32,6 +33,7 @@ nav.scrolled {
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
+    width: 100%;
 }
 
 .navbar-container {
@@ -111,8 +113,9 @@ a {
 }
 
 .storyset-a {
-    color: rgb(176, 176, 176);
-    font-size: 1rem;
+    color: rgb(187, 187, 187);
+    font-size: .8rem;
+    text-decoration: none;
 }
 
 #home-container {
@@ -162,16 +165,45 @@ a {
     background-color: #f7f7f7;
 }
 
+@media screen and (max-width: 850px) {
+    #about-container {
+        padding: 3rem;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5rem;
+        background-color: #f7f7f7;
+    }
+}
+
 .testimonials {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-content: center;
     gap: 5rem;
-    grid-area: testimonials;
+}
+
+@media screen and (max-width: 1092px) {
+    .testimonials {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .home-text-h1 {
+        text-align: center;
+        line-height: 5rem;
+    }
 }
 
 #services-container {
+    background-image: url('./services.jpg');
+    background-color: rgb(245, 245, 245);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -180,22 +212,41 @@ a {
 }
 
 #services-container h3 {
-    padding-left: 1rem;
-    font-size: 1.6rem;
+    text-align: center;
+    padding: 1rem;
+    font-size: 2rem;
+    color: rgb(0, 0, 0);
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .services {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 3rem;
 }
 
-.serve {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
+@media screen and (max-width: 950px) {
+    #services-container {
+        padding: 2rem;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        background-color: #f7f7f7;
+    }
+
+    .services {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+    }
 }
 
 #contact-container {
@@ -209,6 +260,7 @@ a {
     align-items: center;
     justify-content: center;
     height: 95vh;
+    width: 100%;
 }
 
 .contact-form {
@@ -229,14 +281,59 @@ a {
     border: 1.5px solid black;
 }
 
+@media screen and (max-width: 850px) {
+    #contact-container {
+        width: 100vw;
+    }
+
+    .contact-form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: .8rem;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: .3rem;
+        height: 100vh;
+        width: 30rem;
+        text-align: center;
+    }
+
+    .line-separator {
+        height: 0rem;
+        width: 60vw;
+        border: 1.5px solid black;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .contact-form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: .3rem;
+        height: 100vh;
+        width: 100vw;
+        text-align: center;
+    }
+}
+
 footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 1.5rem;
     background-color: #fff;
     color: rgb(176, 176, 176);
+    width: 100vw;
+    padding-top: 1rem;
 }
 
 footer form {
@@ -324,6 +421,36 @@ footer form {
     gap: 1rem;
 }
 
+@media screen and (max-width: 1000px) {
+    footer {
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
+        padding-top: 1rem;
+    }
+
+    .footer-top {
+        padding-left: 10px;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+
+    .footer-middle {
+        padding-left: 10px;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+
+    .email-list p {
+        width: 100%;
+    }
+
+    .footer-line {
+        border: 0.5px solid black;
+        width: 100%;
+    }
+}
+
 .four-container {
     display: flex;
     flex-direction: column;
@@ -336,6 +463,10 @@ footer form {
     font-size: 2rem;
     color: #007BFF;
     text-decoration: underline;
+}
+
+.contact-cta-a {
+    text-decoration: none;
 }
 
 /* BUTTONS */
@@ -537,7 +668,6 @@ footer form {
     border: 1px solid var(--cardBorder);
     padding: 25px;
     box-shadow: 8px 8px 0 var(--cardShadow);
-    /* transition: box-shadow .5s, transform .5s; */
     border-radius: 8px;
     display: inline-block;
     opacity: 0;
@@ -614,15 +744,20 @@ footer form {
 /*  */
 
 .card2 {
+    --cardShadow: rgba(32, 33, 37, .1);
+    --cardShadowHover: rgba(32, 33, 37, .06);
+    --cardShadowActive: rgba(32, 33, 37, .55);
+}
+
+.card2 {
     width: 100%;
-    max-width: 300px;
-    min-width: 200px;
+    max-width: 25rem;
+    min-width: 15rem;
     height: 250px;
-    background-color: rgb(50, 50, 50);
+    background-color: rgb(210, 210, 210);
     margin: 10px;
     border-radius: 10px;
-    box-shadow: 10px 2px 10px rgba(0, 0, 0, 0.24);
-    border: 2px solid rgba(7, 7, 7, 0.12);
+    box-shadow: 8px 8px 0 var(--cardShadow);
     font-size: 16px;
     transition: all 0.3s ease;
     position: relative;
@@ -632,6 +767,14 @@ footer form {
     flex-direction: column;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s, transform 2s, box-shadow 0.5s ease-out;
+}
+
+.fade-in {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .icon {
@@ -658,7 +801,7 @@ footer form {
     margin: 0;
     text-align: center;
     margin-top: 30px;
-    color: white;
+    color: black;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -667,10 +810,10 @@ footer form {
 .card2 .text {
     width: 80%;
     margin: 0 auto;
-    font-size: 13px;
+    font-size: 16px;
     text-align: center;
     margin-top: 20px;
-    color: white;
+    color: black;
     font-weight: 200;
     letter-spacing: 2px;
     opacity: 0;
@@ -678,9 +821,10 @@ footer form {
     transition: all 0.3s ease;
 }
 
-/* .card2:hover {
-    height: 270px;
-} */
+.card2:hover {
+    transform: translate(-2px, -4px);
+    box-shadow: 16px 16px 0 var(--cardShadowHover);
+}
 
 .card2:hover .text {
     transition: all 0.5s ease;
@@ -721,7 +865,6 @@ article a::after {
     content: "";
 }
 
-/* basic article elements styling */
 article h2 {
     margin: 0 0 18px 0;
     font-size: 1.9rem;
@@ -739,6 +882,7 @@ figure {
 
 article img {
     max-width: 100%;
+    height: 55vh;
     transform-origin: center;
     transform: scale(var(--img-scale));
     transition: transform 0.4s ease-in-out;
@@ -769,7 +913,6 @@ article a .icon {
     transition: all 0.3s;
 }
 
-/* using the has() relational pseudo selector to update our custom properties */
 article:has(:hover, :focus) {
     --img-scale: 1.1;
     --title-color: #007BFF;
