--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -67,5 +67,4 @@ import Layout from "../layouts/Layout.astro";
 <script
   type="text/javascript"
   src="https://assets.calendly.com/assets/external/widget.js"
-  async
-></script>
+  async></script>
