--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -5,7 +5,7 @@ import Button2 from "../components/buttons/Button2";
 
 <Layout title="Byte Bros">
   <main id="services-container">
-    <h3>What we offer:</h3>
+    <h3>Solutions tailored to your needs</h3>
     <div class="services">
       <div class="card2">
         <div class="icon">
@@ -68,47 +68,77 @@ import Button2 from "../components/buttons/Button2";
         <p class="text">Lorem ipsum dolor.</p>
       </div>
     </div>
-    <h3>Who We Serve:</h3>
-    <div class="serve">
+    <h3>For anyone</h3>
+    <div class="services">
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 20"><path fill="currentColor" d="M9.993 10.573a4.5 4.5 0 1 0 0-9a4.5 4.5 0 0 0 0 9ZM10 0a6 6 0 0 1 3.04 11.174c3.688 1.11 6.458 4.218 6.955 8.078c.047.367-.226.7-.61.745c-.383.045-.733-.215-.78-.582c-.54-4.19-4.169-7.345-8.57-7.345c-4.425 0-8.101 3.161-8.64 7.345c-.047.367-.397.627-.78.582c-.384-.045-.657-.378-.61-.745c.496-3.844 3.281-6.948 6.975-8.068A6 6 0 0 1 10 0Z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 20 20"
+            ><path
+              fill="currentColor"
+              d="M9.993 10.573a4.5 4.5 0 1 0 0-9a4.5 4.5 0 0 0 0 9ZM10 0a6 6 0 0 1 3.04 11.174c3.688 1.11 6.458 4.218 6.955 8.078c.047.367-.226.7-.61.745c-.383.045-.733-.215-.78-.582c-.54-4.19-4.169-7.345-8.57-7.345c-4.425 0-8.101 3.161-8.64 7.345c-.047.367-.397.627-.78.582c-.384-.045-.657-.378-.61-.745c.496-3.844 3.281-6.948 6.975-8.068A6 6 0 0 1 10 0Z"
+            ></path></svg
+          >
         </div>
         <p class="title">Person 1</p>
         <p class="text">Lorem ipsum dolor.</p>
       </div>
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 20"><path fill="currentColor" d="M9.993 10.573a4.5 4.5 0 1 0 0-9a4.5 4.5 0 0 0 0 9ZM10 0a6 6 0 0 1 3.04 11.174c3.688 1.11 6.458 4.218 6.955 8.078c.047.367-.226.7-.61.745c-.383.045-.733-.215-.78-.582c-.54-4.19-4.169-7.345-8.57-7.345c-4.425 0-8.101 3.161-8.64 7.345c-.047.367-.397.627-.78.582c-.384-.045-.657-.378-.61-.745c.496-3.844 3.281-6.948 6.975-8.068A6 6 0 0 1 10 0Z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 20 20"
+            ><path
+              fill="currentColor"
+              d="M9.993 10.573a4.5 4.5 0 1 0 0-9a4.5 4.5 0 0 0 0 9ZM10 0a6 6 0 0 1 3.04 11.174c3.688 1.11 6.458 4.218 6.955 8.078c.047.367-.226.7-.61.745c-.383.045-.733-.215-.78-.582c-.54-4.19-4.169-7.345-8.57-7.345c-4.425 0-8.101 3.161-8.64 7.345c-.047.367-.397.627-.78.582c-.384-.045-.657-.378-.61-.745c.496-3.844 3.281-6.948 6.975-8.068A6 6 0 0 1 10 0Z"
+            ></path></svg
+          >
         </div>
         <p class="title">Person 2</p>
         <p class="text">Lorem ipsum dolor.</p>
       </div>
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 20"><path fill="currentColor" d="M9.993 10.573a4.5 4.5 0 1 0 0-9a4.5 4.5 0 0 0 0 9ZM10 0a6 6 0 0 1 3.04 11.174c3.688 1.11 6.458 4.218 6.955 8.078c.047.367-.226.7-.61.745c-.383.045-.733-.215-.78-.582c-.54-4.19-4.169-7.345-8.57-7.345c-4.425 0-8.101 3.161-8.64 7.345c-.047.367-.397.627-.78.582c-.384-.045-.657-.378-.61-.745c.496-3.844 3.281-6.948 6.975-8.068A6 6 0 0 1 10 0Z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 20 20"
+            ><path
+              fill="currentColor"
+              d="M9.993 10.573a4.5 4.5 0 1 0 0-9a4.5 4.5 0 0 0 0 9ZM10 0a6 6 0 0 1 3.04 11.174c3.688 1.11 6.458 4.218 6.955 8.078c.047.367-.226.7-.61.745c-.383.045-.733-.215-.78-.582c-.54-4.19-4.169-7.345-8.57-7.345c-4.425 0-8.101 3.161-8.64 7.345c-.047.367-.397.627-.78.582c-.384-.045-.657-.378-.61-.745c.496-3.844 3.281-6.948 6.975-8.068A6 6 0 0 1 10 0Z"
+            ></path></svg
+          >
         </div>
         <p class="title">Person 3</p>
         <p class="text">Lorem ipsum dolor.</p>
       </div>
     </div>
-    <h3>Interested?</h3>
-    <button class="cta">
-      <span class="hover-underline-animation">Get In Touch</span>
-      <svg
-        viewBox="0 0 46 16"
-        height="20"
-        width="40"
-        xmlns="http://www.w3.org/2000/svg"
-        id="arrow-horizontal"
-      >
-        <path
-          transform="translate(30)"
-          d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-          data-name="Path 10"
-          id="Path_10"></path>
-      </svg>
-    </button>
+    <h3>
+      <button class="cta">
+        <span class="hover-underline-animation"
+          ><a href="contact" class="contact-cta-a">Get In Touch</a></span
+        >
+        <svg
+          viewBox="0 0 46 16"
+          height="20"
+          width="40"
+          xmlns="http://www.w3.org/2000/svg"
+          id="arrow-horizontal"
+        >
+          <path
+            transform="translate(30)"
+            d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+            data-name="Path 10"
+            id="Path_10"></path>
+        </svg>
+      </button>
+    </h3>
   </main>
 </Layout>
 
@@ -120,3 +150,23 @@ import Button2 from "../components/buttons/Button2";
     width: 114%;
   }
 </style>
+
+<script>
+  function handleIntersection(entries: any, observer: any) {
+    entries.forEach((entry: any) => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("fade-in");
+        observer.unobserve(entry.target);
+      }
+    });
+  }
+  const observer = new IntersectionObserver(handleIntersection, {
+    root: null,
+    rootMargin: "0px",
+    threshold: 1,
+  });
+  const cards = document.querySelectorAll(".card2");
+  cards.forEach((card) => {
+    observer.observe(card);
+  });
+</script>
